tests/data/placebo/test_asg_security_group_not_matched/autoscaling.DescribeAutoScalingGroups_1.json
{
  "status_code": 200,
  "data": {
    "AutoScalingGroups": [
      {
        "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:314bd7a9-7bcb-462e-984b-5bbf32e9a4a7:autoScalingGroupName/asg-test-name",
        "TargetGroupARNs": [],
        "SuspendedProcesses": [],
        "DesiredCapacity": 1,
        "Tags": [],
        "EnabledMetrics": [],
        "LoadBalancerNames": [],
        "AutoScalingGroupName": "asg-test-name",
        "DefaultCooldown": 300,
        "MinSize": 1,
        "Instances": [
          {
            "ProtectedFromScaleIn": false,
            "AvailabilityZone": "us-east-1d",
            "InstanceId": "i-069de1afdc473fd7d",
            "HealthStatus": "Healthy",
            "LifecycleState": "InService",
            "LaunchConfigurationName": "foo-bar "
          }
        ],
        "MaxSize": 1,
        "VPCZoneIdentifier": "subnet-3a334610",
        "HealthCheckGracePeriod": 300,
        "TerminationPolicies": [
          "Default"
        ],
        "LaunchConfigurationName": "foo-bar ",
        "CreatedTime": {
          "hour": 18,
          "__class__": "datetime",
          "month": 6,
          "second": 7,
          "microsecond": 986000,
          "year": 2017,
          "day": 27,
          "minute": 10
        },
        "AvailabilityZones": [
          "us-east-1d"
        ],
        "HealthCheckType": "EC2",
        "NewInstancesProtectedFromScaleIn": false
      }
    ],
    "ResponseMetadata": {}
  }
}
